[package]
name = "lndtip"
version = "0.1.0"
authors = ["David Rasch <david@bigdatahub.com>"]
edition = "2018"

[dependencies]
warp = "0.2.2"
env_logger="0.6.0"
failure="0.1"
tokio = { version = "0.2", features = ["macros"] }

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

r2d2_lndclient = { path="../r2d2_lndclient"}
base64 = "0.12.0"