[package]
name = "lndtip"
version = "0.1.0"
authors = ["David Rasch <david@bigdatahub.com>"]
edition = "2018"

[dependencies]
warp = "0.2"
env_logger="0.6.0"
tokio = { version = "0.2", features = ["macros","stream"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
mobc_lndclient = { path="../mobc_lndclient"}
base64 = "0.12.0"