[package]
name = "lndwithdrawal"
version = "0.1.0"
authors = ["David Rasch <dcrasch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
env_logger="0.6.0"
tokio = { version = "0.2", features = ["macros","stream"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
mobc_lndclient = { path="../mobc_lndclient"}
base64 = "0.12.0"

bech32 = "0.7.1"
qrcode = "0.12"
image = "0.23"
lightning-invoice = "0.2.0"

