[package]
name = "rust_lndclient"
version = "0.1.0"
authors = ["David Rasch <dcrasch@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
grpc = "0.7"
protobuf = "2.14"
httpbis = "0.8"
tls-api = "0.3.*"
tls-api-native-tls = "0.3.*"
futures = "0.3.*"
grpc-protobuf = "0.7"

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
protoc-rust-grpc = "0.7"