[package]
name = "rust_lndclient"
version = "0.1.0"
authors = ["David Rasch <dcrasch@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
prost = "0.6"
prost-types = "0.6.1"

tonic = { version = "0.2", features = ["tls", "tls-roots"] }
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc","executor"] }

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.2"
