[package]
name = "rust_lndclient"
version = "0.1.0"
authors = ["David Rasch <dcrasch@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
prost = "0.7"
prost-types = "0.7"

tonic = { version = "0.4", features = ["tls", "tls-roots"] }

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4"